# RSCoordinator

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  COMMANDS.md  Dockerfile  Makefile  README.md  configure.py  gen-test-certs.sh  hiredis_patch  ramp-light-rce.yml  ramp-light.yml  ramp.yml  redisearch_pytests  system-setup.py  triemap.c
.circleci/: build.sh  config.yml  configure.sh  package-light-rce.sh  package-light.sh  package.sh  test.sh
fab/: common.conf  fabfile.oss.py  fabfile.py
playground/: Gemfile  Procfile  README.md  bootstrap.py  common.conf  node7000.conf  node7001.conf  node7002.conf  node7003.conf  node7004.conf  node7005.conf
playground/7000/: redis.conf
playground/7001/: redis.conf
playground/7002/: redis.conf
playground/7003/: redis.conf
playground/7004/: redis.conf
playground/7005/: redis.conf
pytest/: base_case.py  oss_tests  test.py  test_aggregate.py  test_all.py  test_cn.py  test_fuzz.py  test_scorers.py  test_summarize.py  test_synonyms.py  test_tags.py  test_wideschema.py
src/: CMakeLists.txt  Makefile  Procfile  cluster.c  cluster.h  cluster_spell_check.c  cluster_spell_check.h  command.c  command.h  config.c  config.h  crc12_tags.h  crc16_tags.h  dist_aggregate.c  dist_alias.c  dist_alias.cpp  dist_alias.h  dist_plan.c  dist_plan.cpp  dist_plan.h  dist_search.c  dist_search.h  fnv32.h  info_command.c  info_command.h  main.c  module.c  node7000.conf  partition.c  partition.h  periodic.c  periodic.h  print_version.c  ramp.yml  redismodule.h  reducers.c  reducers.h  reply.c  reply.h  rmr.c  (+6 more)
src/build-info/: info.h
src/dep/: crc16.h
src/dep/rmr/: CMakeLists.txt  Makefile  chan.c  chan.h  cluster.c  cluster.h  command.c  command.h  conn.c  conn.h  crc12.h  endpoint.c  endpoint.h  node.h  node_map.c  redis_cluser.h  redis_cluster.c  redis_cluster.h  redise.c  redise.h  reply.c  reply.h  rmr.c  rmr.h  rq.h
src/dep/rmr/hiredis/: CMakeLists.txt  Makefile  async.c  async.h  bench.c  hiredis.c  hiredis.h  net.c  net.h  read.c  read.h  reply.c  reply.h  test.c
src/dep/rmr/hiredis/adapters/: libuv.h
src/dep/rmr/redise_parser/: Makefile  grammar.c  grammar.h  grammar.y  lex.yy.c  lexer.h  parse.h  parser_ctx.h  template.c.tpl
src/dep/rmr/test/: CMakeLists.txt  Makefile  init-rm.c  test_chan.c  test_cluster.c  test_parser.c
src/dep/rmutil/: CMakeLists.txt  Makefile  periodic.c  sds.c  util.c  util.h
src/dep/triemap/: Makefile  triemap.c
src/hiredis/: Makefile
src/parser/: Makefile  grammar.c  grammar.h  grammar.y  lex.yy.c  lexer.l  parse.c  parser_ctx.h
test/: CMakeLists.txt  Makefile  test_cluster  test_cluster.c  test_distagg.cpp  test_parser.c  test_searchcluster  test_searchcluster.c
tests/benchmarks/: Readme.md
tests/qa/: RS_VERSION  RS_VERSIONS  automation-testing.json  nightly.json  nightly.yml  qatests  release.json  release.yml  run
